kubernetes/ingress/nginx-ingress-ssl.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: edge-gateway-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - myedgegateway.com
    secretName: "myedgegateway-tls"
  rules:
  - host: myedgegateway.com
    http:
      paths:
      - backend:
          serviceName: mosquitto-service
          servicePort: 1883
        path: /mosquitto
      - backend:
          serviceName: mlflowui-service
          servicePort: 5000
        path: /mlflowui
      - backend:
          serviceName: nodered-service
          servicePort: 1880
        path: /nodered
      - backend:
          serviceName: mysql-service
          servicePort: 3306
        path: /mysql
